// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`If does not render the content if the condition is falsy (expression) 1`] = `
"<?xml version="1.0" encoding="utf-8"?>
            <html>
                <body>
                    
                </body>
            </html>
        "
`;

exports[`If does not render the content if the condition is falsy 1`] = `
"<?xml version="1.0" encoding="utf-8"?>
            <html>
                <body>
                    
                </body>
            </html>
        "
`;

exports[`If renders the content if the condition is truthy (expression) 1`] = `
"<?xml version="1.0" encoding="utf-8"?>
            <html>
                <body>
                    
                        <span>content</span>
                    
                </body>
            </html>
        "
`;

exports[`If renders the content if the condition is truthy 1`] = `
"<?xml version="1.0" encoding="utf-8"?>
            <html>
                <body>
                    
                        <span>content</span>
                    
                </body>
            </html>
        "
`;
